<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_pager"
        android:title="@string/home_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation"
        android:enabled="true"
        android:icon="@drawable/ic_navigation"
        android:title="@string/navigation_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tree"
        android:enabled="true"
        android:icon="@drawable/ic_knowledge_hierarchy"
        android:title="@string/tree_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/project"
        android:enabled="true"
        android:icon="@drawable/ic_project"
        android:title="@string/project_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wx_title"
        android:enabled="true"
        android:icon="@drawable/ic_wx_article"
        android:title="@string/wx_title"
        app:showAsAction="ifRoom" />
</menu>